--- a/presenca/lista_visitantes.html
+++ b/presenca/lista_visitantes.html
@@ -3,206 +3,288 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Consulta de Visitantes</title>
+<title>Lista de Visitantes</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <style>
-.culto-card { cursor:pointer; transition:all .3s;}
-.culto-card:hover {transform:translateY(-3px);box-shadow:0 5px 15px rgba(0,0,0,.1);}
-.navbar {background:#4CAF50; box-shadow:0 2px 4px rgba(0,0,0,.1);}
-.navbar .nav-link,.navbar .navbar-brand{color:#fff;}
-.navbar .nav-link:hover,.navbar .navbar-brand:hover{color:#ddd;}
-.bg-verde-escuro{background-color:#1e7e34!important;}
-.btn-primary{background:#28a745!important;border-color:#28a745!important;}
-.btn-primary:hover{background:#218838!important;border-color:#1e7e34!important;}
-.loading-spinner{display:none;}
-.btn-buscar .loading-spinner{display:inline-block;margin-right:8px;}
+  .culto-card {
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+  .culto-card:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+  }
+  .navbar {
+    background-color: #4CAF50;
+  }
+  .navbar .nav-link, .navbar .navbar-brand {
+    color: #fff;
+  }
+  .navbar .nav-link:hover, .navbar .navbar-brand:hover {
+    color: #ddd;
+  }
 </style>
 </head>
 <body class="bg-light">
+
 <nav class="navbar navbar-expand-lg navbar-dark">
-<div class="container">
-<a class="navbar-brand" href="#">Consulta de Visitantes</a>
-<div class="collapse navbar-collapse">
-<ul class="navbar-nav ms-auto">
-<li class="nav-item"><a class="nav-link" href="frequencia.html">Frequência Mensal</a></li>
-<li class="nav-item"><a class="nav-link" href="lista.html">Voltar para Cadastro</a></li>
-<li class="nav-item"><a class="nav-link" id="btn-logout" href="#">Sair</a></li>
-</ul></div></div></nav>
+  <div class="container">
+    <a class="navbar-brand" href="#">Lista de Visitantes</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="frequencia.html">
+            <i class="bi bi-graph-up me-1"></i> Frequência Mensal
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="lista.html">
+            <i class="bi bi-arrow-left"></i> Voltar para Cadastro
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="btn-logout" href="#">
+            <i class="bi bi-box-arrow-right"></i> Sair
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <div class="container py-4">
-<div class="card shadow">
-<div class="card-header bg-verde-escuro text-white">
-<h4 class="mb-0">Consulta de Visitantes nos Cultos</h4></div>
-<div class="card-body">
-<div class="row mb-4">
-<div class="col-md-6"><label>Data Início</label><input type="date" id="data-inicio" class="form-control"></div>
-<div class="col-md-6"><label>Data Fim</label><input type="date" id="data-fim" class="form-control"></div></div>
-<button id="btn-buscar" class="btn btn-primary mb-4">
-<span class="loading-spinner spinner-border spinner-border-sm"></span> Buscar Cultos</button>
-<div id="lista-cultos" class="row g-3"></div>
+  <div class="card shadow">
+    <div class="card-header bg-success text-white">
+      <h4 class="mb-0">Cultos com Visitantes</h4>
+    </div>
+    <div class="card-body">
+      <div class="row mb-4">
+        <div class="col-md-6">
+          <label for="data-inicio" class="form-label">Data Início</label>
+          <input type="date" id="data-inicio" class="form-control">
+        </div>
+        <div class="col-md-6">
+          <label for="data-fim" class="form-label">Data Fim</label>
+          <input type="date" id="data-fim" class="form-control">
+        </div>
+      </div>
+      <button id="btn-buscar" class="btn btn-success mb-4">
+        <span class="spinner-border spinner-border-sm d-none" role="status"></span>
+        <i class="bi bi-search"></i> Buscar
+      </button>
+      <div id="lista-cultos" class="row g-3"></div>
 
-<div class="modal fade" id="cultoModal" tabindex="-1">
-<div class="modal-dialog modal-lg"><div class="modal-content">
-<div class="modal-header"><h5 class="modal-title">Visitantes</h5>
-<button type="button" class="btn-close" data-bs-dismiss="modal"></button></div>
-<div class="modal-body">
-<h6 id="cultoModalDate"></h6>
-<button id="btn-exportar" class="btn btn-success btn-sm mb-2">Exportar PDF</button>
-<div id="cultoModalContent" class="list-group" style="max-height:400px;overflow-y:auto;"></div>
-</div></div></div></div>
+      <!-- Modal -->
+      <div class="modal fade" id="cultoModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Visitantes</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+              <h6 id="cultoModalDate" class="mb-3"></h6>
+              <div class="mb-2">
+                <button id="btn-exportar" type="button" class="btn btn-success btn-sm">
+                  <i class="bi bi-download"></i> Exportar PDF
+                </button>
+              </div>
+              <div id="cultoModalContent" class="list-group" style="max-height:400px; overflow-y:auto;"></div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-</div></div></div>
+    </div>
+  </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-database-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
-
 <script type="module">
 import { firebaseConfig } from '../firebase-config.js';
 firebase.initializeApp(firebaseConfig);
 const database = firebase.database();
-const auth = firebase.auth();
 const cultoModal = new bootstrap.Modal(document.getElementById('cultoModal'));
 
-let cultoAtual = null;
 
-auth.onAuthStateChanged(user => {
-if (!user) { window.location.href = '../login.html'; return; }
-inicializar();
+
+  // PARTE 2
+const auth = firebase.auth();
+
+// logout
+document.getElementById('btn-logout').addEventListener('click', (e) => {
+  e.preventDefault();
+  auth.signOut().then(() => {
+    window.location.href = '../login.html';
+  });
 });
 
-document.getElementById('btn-logout').addEventListener('click', e => {
-e.preventDefault(); auth.signOut().then(()=>window.location.href='../login.html');
+auth.onAuthStateChanged((user) => {
+  if (!user) {
+    window.location.href = '../login.html';
+  } else {
+    inicializar();
+  }
 });
 
 function inicializar() {
-const fim = new Date();
-const inicio = new Date(); inicio.setDate(inicio.getDate()-30);
-document.getElementById('data-inicio').value = inicio.toISOString().split('T')[0];
-document.getElementById('data-fim').value = fim.toISOString().split('T')[0];
-document.getElementById('btn-buscar').addEventListener('click', buscarCultos);
-buscarCultos();
+  const fim = new Date();
+  const inicio = new Date();
+  inicio.setDate(inicio.getDate() - 30);
+  document.getElementById('data-inicio').value = inicio.toISOString().split('T')[0];
+  document.getElementById('data-fim').value = fim.toISOString().split('T')[0];
+
+  document.getElementById('btn-buscar').addEventListener('click', buscar);
+  buscar();
 }
 
-function buscarCultos() {
-const dataInicio = document.getElementById('data-inicio').value;
-const dataFim = document.getElementById('data-fim').value;
-const btn = document.getElementById('btn-buscar');
-if (!dataInicio || !dataFim) return;
-btn.disabled = true; btn.querySelector('.loading-spinner').style.display = 'inline-block';
-const lista = document.getElementById('lista-cultos');
-lista.innerHTML = '<div class="col-12 text-center py-4"><div class="spinner-border"></div></div>';
-database.ref('presencas_culto').once('value').then(snap=>{
-const cultos=[];
-snap.forEach(cs=>{
-const val=cs.val(), id=cs.key, date=val.data;
-if (date>=dataInicio && date<=dataFim) {
-cultos.push({id,date,dados:val.presentes||{}});
-}});
-cultos.sort((a,b)=>new Date(b.date)-new Date(a.date));
-exibirCultos(cultos);
-}).finally(()=>{btn.disabled=false;btn.querySelector('.loading-spinner').style.display='none';});
+function buscar() {
+  const btn = document.getElementById('btn-buscar');
+  const lista = document.getElementById('lista-cultos');
+  const inicio = document.getElementById('data-inicio').value;
+  const fim = document.getElementById('data-fim').value;
+
+  btn.disabled = true;
+  btn.querySelector('.spinner-border').classList.remove('d-none');
+  lista.innerHTML = `<div class="col-12 text-center py-4"><div class="spinner-border"></div></div>`;
+
+  database.ref('presencas_culto').once('value').then(snapshot => {
+    const cultos = [];
+    snapshot.forEach(child => {
+      const dados = child.val();
+      const data = dados.data;
+      if (data >= inicio && data <= fim) {
+        const visitantes = Object.values(dados.presentes || {}).filter(v => v.nome).length;
+        if (visitantes > 0) {
+          cultos.push({
+            id: child.key,
+            data,
+            visitantes,
+            dados: dados.presentes
+          });
+        }
+      }
+    });
+
+    cultos.sort((a, b) => new Date(b.data) - new Date(a.data));
+
+    exibir(cultos);
+  }).finally(() => {
+    btn.disabled = false;
+    btn.querySelector('.spinner-border').classList.add('d-none');
+  });
 }
 
-function exibirCultos(cultos) {
-const lista = document.getElementById('lista-cultos');
-lista.innerHTML = '';
-if (cultos.length===0) {
-lista.innerHTML='<div class="col-12 text-center text-muted py-4">Nenhum culto encontrado</div>'; return;
-}
-cultos.forEach(c=>{
-const col=document.createElement('div');col.className='col-md-6 col-lg-4';
-col.innerHTML=`
-<div class="card culto-card mb-3">
-<div class="card-body">
-<h5>${formatarData(c.date)}</h5>
-<button class="btn btn-sm btn-outline-primary" data-id="${c.id}" data-date="${c.date}">Ver visitantes</button>
-</div></div>`;
-lista.appendChild(col);
-});
-document.querySelectorAll('[data-id]').forEach(btn=>{
-btn.onclick=()=>mostrarDetalhes(btn.dataset.id,btn.dataset.date);
-});
-}
+function exibir(cultos) {
+  const lista = document.getElementById('lista-cultos');
+  lista.innerHTML = '';
 
-function mostrarDetalhes(cultoId,cultoDate) {
-cultoAtual={id:cultoId,date:cultoDate};
-const modalDate=document.getElementById('cultoModalDate');
-const modalContent=document.getElementById('cultoModalContent');
-modalDate.textContent=`Visitantes - ${formatarData(cultoDate)}`;
-modalContent.innerHTML='<div class="text-center py-4"><div class="spinner-border"></div></div>';
+  if (cultos.length === 0) {
+    lista.innerHTML = `<div class="col-12 text-center text-muted py-4">Nenhum culto com visitantes encontrado no período</div>`;
+    return;
+  }
 
-database.ref(`presencas_culto/${cultoId}/presentes`).once('value').then(snap=>{
-const data=snap.val();
-const itens=Object.entries(data||{})
-.filter(([id,v])=>typeof v==='object'&&v.nome)
-.map(([id,v])=>({
-nome:v.nome||'Não informado',
-endereco:v.endereco||'Não informado',
-cristao:v.cristao||'Não informado',
-telefone:v.telefone||'Não informado',
-dataVisita:formatarDataSimples(cultoDate)
-}));
-modalContent.innerHTML='';
-if (itens.length===0) {
-modalContent.innerHTML='<div class="text-center text-muted py-4">Nenhum visitante encontrado</div>';
-return;
-}
-itens.forEach(i=>{
-const div=document.createElement('div');
-div.className='list-group-item';
-div.innerHTML=`<strong>${i.nome}</strong><br>Data: ${i.dataVisita}`;
-modalContent.appendChild(div);
-});
-document.getElementById('btn-exportar').onclick=()=>exportarPDF(itens,cultoDate);
-cultoModal.show();
-});
+  cultos.forEach(culto => {
+    const col = document.createElement('div');
+    col.className = 'col-md-6 col-lg-4';
+    const card = document.createElement('div');
+    card.className = 'card culto-card mb-3';
+    card.innerHTML = `
+      <div class="card-body">
+        <h5 class="card-title">${formatarData(culto.data)}</h5>
+        <p class="card-text">${culto.visitantes} visitante(s)</p>
+        <button class="btn btn-sm btn-outline-primary" data-id="${culto.id}" data-data="${culto.data}">Ver visitantes</button>
+      </div>
+    `;
+    col.appendChild(card);
+    lista.appendChild(col);
+  });
+
+  document.querySelectorAll('[data-id]').forEach(btn => {
+    btn.addEventListener('click', () => {
+      mostrarModal(btn.dataset.id, btn.dataset.data);
+    });
+  });
 }
 
-function exportarPDF(itens,cultoDate) {
-const { jsPDF } = window.jspdf;
-const doc=new jsPDF({orientation:'landscape'});
-const pageWidth=doc.internal.pageSize.getWidth();
-const margin=15,lineHeight=7;
-let yPos=15;
 
-doc.setFontSize(16);
-doc.text('Lista de Visitantes - Culto',pageWidth/2,yPos,{align:'center'});
-yPos+=lineHeight;
-doc.setFontSize(14);
-doc.text(formatarDataSimples(cultoDate),pageWidth/2,yPos,{align:'center'});
-yPos+=lineHeight*2;
+function mostrarModal(id, data) {
+  const modalTitle = document.getElementById('cultoModalDate');
+  const modalContent = document.getElementById('cultoModalContent');
+  modalTitle.textContent = `Visitantes - ${formatarData(data)}`;
+  modalContent.innerHTML = `<div class="text-center py-4"><div class="spinner-border"></div></div>`;
 
-const headers=[['Nome','Endereço','É cristão?','Telefone','Data da visita']];
-const rows=itens.map(i=>[
-i.nome,i.endereco,i.cristao,i.telefone,i.dataVisita
-]);
+  database.ref(`presencas_culto/${id}/presentes`).once('value').then(snapshot => {
+    modalContent.innerHTML = '';
+    const visitantes = [];
+    snapshot.forEach(child => {
+      const val = child.val();
+      if (val.nome) {
+        visitantes.push({
+          nome: val.nome || 'Não informado',
+          endereco: val.endereco || 'Não informado',
+          cristao: val.cristao || 'Não informado',
+          telefone: val.telefone || 'Não informado',
+          data
+        });
+      }
+    });
 
-doc.autoTable({
-startY:yPos,
-head:headers,
-body:rows,
-margin:{left:margin,right:margin},
-styles:{fontSize:12,cellPadding:3,valign:'middle'},
-headStyles:{fillColor:[13,110,253],textColor:255,fontStyle:'bold'},
-alternateRowStyles:{fillColor:[240,240,240]}
-});
+    if (visitantes.length === 0) {
+      modalContent.innerHTML = `<div class="text-center text-muted py-4">Nenhum visitante encontrado</div>`;
+      return;
+    }
 
-doc.save(`visitantes_culto_${cultoDate}.pdf`);
+    visitantes.forEach(v => {
+      const div = document.createElement('div');
+      div.className = 'list-group-item';
+      div.textContent = `${v.nome} (${v.data})`;
+      modalContent.appendChild(div);
+    });
+
+    document.getElementById('btn-exportar').onclick = () => exportarPDF(data, visitantes);
+    cultoModal.show();
+  });
 }
 
-function formatarData(s) {
-const date=new Date(s+'T12:00:00');
-return date.toLocaleDateString('pt-BR',{weekday:'long',year:'numeric',month:'long',day:'numeric'});
+function exportarPDF(data, visitantes) {
+  const { jsPDF } = window.jspdf;
+  const doc = new jsPDF({ orientation: 'landscape' });
+
+  const headers = [['Nome', 'Endereço', 'É cristão', 'Telefone', 'Data da visita']];
+  const rows = visitantes.map(v => [
+    v.nome, v.endereco, v.cristao, v.telefone, v.data
+  ]);
+
+  doc.text(`Visitantes - ${formatarData(data)}`, 15, 15);
+
+  doc.autoTable({
+    startY: 25,
+    head: headers,
+    body: rows,
+    margin: { left: 15, right: 15 },
+    styles: { fontSize: 10 },
+    headStyles: { fillColor: [40, 167, 69], textColor: 255 }
+  });
+
+  doc.save(`visitantes_${data}.pdf`);
 }
-function formatarDataSimples(s) {
-const date=new Date(s+'T12:00:00');
-return date.toLocaleDateString('pt-BR',{day:'2-digit',month:'2-digit',year:'numeric'});
+
+function formatarData(data) {
+  const d = new Date(data + 'T12:00:00');
+  return d.toLocaleDateString('pt-BR', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
 }
 </script>
 
 </body>
 </html>
+
+  
